--- a/theme/macos-menu.less
+++ b/theme/macos-menu.less
@@ -47,15 +47,9 @@
     }
 
     .app-chrome {
-
-        & .app-chrome-item:nth-of-type(2):not(.generic) {
-            margin-left: 75px;
+        .app-chrome--left > .app-chrome-item:nth-of-type(2) {
+            margin-left: calc(var(--sidebarWidth) * 0.28);
         }
-
-        & .app-chrome-item .shuffle {
-            margin-left: 4vw;
-        }
-
         .app-chrome-item .window-controls-macos {
             position: relative;
             left    : 20px;
